--- a/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
@@ -349,20 +349,21 @@
               <div class="col-12 col-md-4 col-lg-4">
                 <div class="form-group">
                       <label class="radio-btns-label d-block">Repaired</label>
-                      <div class="custom-control custom-radio d-inline-block mt-3">
+                      <div class="custom-control custom-radio d-inline-block mt-2">
                           <input type="radio" value="1" [ngModelOptions]="{standalone: true}"
                           [(ngModel)]="inward.isRepaired"  id="customRadio4" name="customRadioIsRepaired" class="custom-control-input">
                           <label class="custom-control-label" for="customRadio4">Repaired</label>
                       </div>
-                      <div class="custom-control custom-radio d-inline-block mt-3 ml-3">
+                      <div class="custom-control custom-radio d-inline-block mt-2 ml-1">
                           <input type="radio" value="2" [ngModelOptions]="{standalone: true}"
                           [(ngModel)]="inward.isRepaired"  id="customRadio5" name="customRadioIsRepaired" class="custom-control-input">
                           <label class="custom-control-label" for="customRadio5">Unrepaied</label>
                       </div>
-                      <div class="custom-control custom-radio d-inline-block mt-3 ml-3">
+                      <div class="custom-control custom-radio d-inline-block mt-2 ml-1">
                           <input type="radio" value="3" [ngModelOptions]="{standalone: true}"
-                          [(ngModel)]="inward.isRepaired"  id="customRadio5" name="customRadioIsRepaired" class="custom-control-input">
-                          <label class="custom-control-label" for="customRadio5">Not Repairable</label>
+                          [(ngModel)]="inward.isRepaired"  id="customRadio6" name="customRadioIsRepaired"
+                          class="custom-control-input">
+                          <label class="custom-control-label" for="customRadio6">Not Repairable</label>
                       </div>
                   </div>
               </div>
