--- a/ClientApp/src/app/modules/inward-material/outward/outward.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward/outward.component.html
@@ -203,7 +203,7 @@
 
 
         </div>
-        <div class="row">
+        <div *ngIf="outward.paidImmediatlyAmount > 0"  class="row">
           <div class="col-12 col-md-12 col-lg-12">
             <div>
               <label class="radio-btns-label d-block">Payment Mode</label>
@@ -241,7 +241,7 @@
           </div>
         </div>
         <br />
-        <div class="row">
+        <div *ngIf="outward.paidImmediatlyAmount > 0" class="row">
           <div *ngIf="outward.paymentMode == '2'" class="col-12 col-md-6 col-lg-4">
             <div class="form-group">
               <div class="input-group datepicker">
