--- a/ClientApp/src/app/modules/inward-material/inward/inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward/inward.component.html
@@ -19,8 +19,9 @@
                 <tr>
 
                   <th style="width: 10%;">Job No#</th>
-                  <th style="width: 25%;">Company Name</th>
-                  <th style="width: 15%;">Is Repaired</th>
+                  <th style="width: 20%;">Company Name</th>
+                  <th style="width: 10%;">Model No</th>
+                  <th style="width: 10%;">Is Repaired</th>
                   <th style="width: 10%;">Delivery Date</th>
                   <th style="width: 20%;">Bill/Outward Status</th>
                   <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
@@ -31,7 +32,8 @@
 
                     <td data-title="Job No">{{ inward.inwardId }}</td>
                     <td data-title="Customer Name">{{ inward.clientName }}</td>
-                    <td data-title="Customer Name">{{getRepairedStatusesById(inward.isRepaired)}}</td>
+                    <td data-title="Model No">{{ inward.modelNo }}</td>
+                    <td data-title="Is Repaired">{{getRepairedStatusesById(inward.isRepaired)}}</td>
                     <td data-title="Delivery Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
                     <td data-title="Bill/Outward Status">{{ getInwardOutwardBillStatusById(inward.outwardBillStatus) }}</td>
                     <td data-title="Actions" class="action text-center actions-td">
