--- a/ClientApp/src/app/modules/inward-material/outward-list/outward-list.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-list/outward-list.component.html
@@ -35,6 +35,10 @@
                        ngbTooltip="Edit" (click)="addOutwardPopup(_outward)"></i>
                   </a>
                   <a href="javascript:void(0)">
+                    <i class="fas fa-print orange" placement="top"
+                       ngbTooltip="Outward Print" (click)="printOutward(_outward.outwardId)"></i>
+                  </a>
+                  <a href="javascript:void(0)">
                     <i class="far fa-trash-alt orange" placement="top"
                        ngbTooltip="Delete" (click)="openDelete(content,_outward)"></i>
                   </a>
