inward barcode changes

--- a/ClientApp/src/app/modules/master/customer/add-edit-customer/add-edit-customer.component.html
+++ b/ClientApp/src/app/modules/master/customer/add-edit-customer/add-edit-customer.component.html
@@ -119,9 +119,9 @@
 
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="form-group has-float-label">
-                  <input class="form-control" type="text" id="telNoSecond" placeholder="Telephone Number 2"
+                  <input class="form-control" type="text" id="telNoSecond" placeholder="Customer GST No."
                          formControlName="telNoSecond2" [(ngModel)]="customer.telNoSecond">
-                  <label for="telNoSecond"> Telephone Number 2 </label>
+                  <label for="telNoSecond"> Customer GST No. </label>
 
                 </div>
               </div>
