--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -183,7 +183,7 @@
                 width: 160px;
                 margin-right: 10px;
                 display: inline-block;
-                font-weight: 600;">Est. LAbour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
+                font-weight: 600;">Est. Labour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
 
             </div>
           </td>
@@ -372,7 +372,7 @@
                 width: 160px;
                 margin-right: 10px;
                 display: inline-block;
-                font-weight: 600;">Est. LAbour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
+                font-weight: 600;">Est. Labour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
 
             </div>
           </td>
@@ -398,6 +398,6 @@
 </body>
 </html>
 <div style="text-align: center; padding-bottom: 15px;">
-  <button printSectionId="print-section" (click)="getBase64EncodedImage()" class="btn btn-primary btn-sm">print</button>
+  <button printSectionId="print-section" [disabled]="isInwardPrinting" (click)="getBase64EncodedImage()" class="btn btn-primary btn-sm">print</button>
   <button class="btn btn-secondary" (click)="close()">Cancel</button>
 </div>
