bill inward outward report

--- a/Views/PDF/PrintInward.cshtml
+++ b/Views/PDF/PrintInward.cshtml
@@ -58,7 +58,7 @@
                     <td style="padding:0; background: transparent; width: 50%; text-align: right;">
 
                         <img style="
-                          margin-right: 7px;" src="@Url.Content($"~/api/Uploads/simple_{Model.barCode}")" id="barCode" />
+                          margin-right: 7px;" src="@Url.Content($"~/api/Uploads/{Model.barCode}")" id="barCode" />
 
                     </td>
                 </tr>
