--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -50,7 +50,7 @@
           <td style="padding:0; background: transparent; width: 50%; text-align: right;">
 
           <img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/simple_'+inward.barCode" id="barCode" />
+            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" />
 
           </td>
         </tr>
@@ -239,7 +239,7 @@
           <td style="padding:0; background: transparent; width: 50%; text-align: right;">
 
           <img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/simple_'+inward.barCode" id="barCode" />
+            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" />
 
           </td>
         </tr>
