--- a/ClientApp/src/app/modules/reports/bill-report/bill-report.component.html
+++ b/ClientApp/src/app/modules/reports/bill-report/bill-report.component.html
@@ -9,26 +9,26 @@
         </div>
         <div class="card-body">
             <!--table search filter start-->
-            <form [formGroup]="searchForm" class="search-filter d-none d-md-block" [ngClass]="searchFilter ? 'd-block' : 'd-none'">
+            <form  class="search-filter d-none d-md-block" [ngClass]="searchFilter ? 'd-block' : 'd-none'">
                 <div class="row mb-2">
                     <div class="col-sm">
                         <div class="form-group has-float-label">
-                            <input class="form-control" type="text" id="companyName" placeholder="Company Name">
+                            <input class="form-control" [ngModelOptions]="{standalone: true}" type="text" [(ngModel)]="searchModel.customerName" id="companyName" placeholder="Company Name">
                             <label for="companyName">Company Name</label>
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="form-group has-float-label">
-                            <input class="form-control" type="text" id="billNumber" placeholder="Bill Number">
+                            <input class="form-control" [ngModelOptions]="{standalone: true}" type="text" [(ngModel)]="searchModel.billNo" id="billNumber" placeholder="Bill Number">
                             <label for="billNumber">Bill Number</label>
                         </div>
                     </div>
-                   
+
                     <div class="col-sm">
                         <div class="form-group">
                             <div class="input-group datepicker">
                                 <label class="date-label">From Date</label>
-                                <input class="form-control"  placeholder="dd-mm-yyyy" name="dp"
+                                <input class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchModel.reportFromDate"  placeholder="dd-mm-yyyy" name="dp"
                                 ngbDatepicker
                                     #d1="ngbDatepicker" (click)="d1.toggle()">
                                 <div class="input-group-append">
@@ -36,22 +36,22 @@
                                         type="button" ><i class="far fa-calendar-alt"></i></button>
                                 </div>
                             </div>
-                           
+
                         </div>
                     </div>
                     <div class="col-sm">
                         <div class="form-group">
                             <div class="input-group datepicker">
                                 <label class="date-label">To Date</label>
-                                <input class="form-control"  placeholder="dd-mm-yyyy" name="dp"
-                                ngbDatepicker
+                                <input class="form-control" [ngModelOptions]="{standalone: true}"  placeholder="dd-mm-yyyy" name="dp"
+                                ngbDatepicker [(ngModel)]="searchModel.reportToDate"
                                     #d2="ngbDatepicker" (click)="d2.toggle()">
                                 <div class="input-group-append">
                                     <button  class="btn btn-outline-secondary calendar" (click)="d2.toggle()"
                                         type="button" ><i class="far fa-calendar-alt"></i></button>
                                 </div>
                             </div>
-                           
+
                         </div>
                     </div>
                     <div class="col-sm text-right">
@@ -66,7 +66,7 @@
             <!--table listing statrt-->
             <div id="no-more-tables">
                 <!-- This id used for responsive table -->
-                <table class="table table-striped">
+                <table class="table table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                         <tr>
                             <th scope="col" style="width:14%" class="cursor">
@@ -85,7 +85,7 @@
                                 Job ₹
                             </th>
                             <th scope="col" style="width:14%" class="text-right">
-                                Adavance ₹
+                                Advance ₹
                             </th>
                             <th scope="col" style="width:14%" class="text-right">
                                 Paid ₹
@@ -96,72 +96,20 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td data-title="Bill Date">09-09-2020</td>
-                            <td data-title="Bill #">AG-00021</td>
-                            <td data-title="Job #">12345</td>
-                            <td data-title="Job ₹" class="text-right">2000</td>
-                            <td data-title="Adavance ₹" class="text-right">1000</td>
-                            <td data-title="Paid ₹" class="text-right">500</td>
-                            <td data-title="O/S ₹" class="text-right">500</td>
+                        <tr *ngFor="let bill of lstBillReport">
+                            <td data-title="Bill Date">{{bill.reportDate | date: 'dd/MM/yyyy' }}</td>
+                            <td data-title="Bill #">{{bill.reportId}}</td>
+                            <td data-title="Job #">{{bill.inwardId}}</td>
+                            <td data-title="Job ₹" class="text-right">{{bill.serviceAmount}}</td>
+                            <td data-title="Advance ₹" class="text-right">{{bill.advanceAmount}}</td>
+                            <td data-title="Paid ₹" class="text-right">{{bill.paidImmediatlyAmount}}</td>
+                            <td data-title="O/S ₹" class="text-right">{{bill.outstandingAmount}}</td>
                         </tr>
-                        <tr>
-                            <td data-title="Bill Date">09-09-2020</td>
-                            <td data-title="Bill #">AG-00021</td>
-                            <td data-title="Job #">12345</td>
-                            <td data-title="Job ₹" class="text-right">2000</td>
-                            <td data-title="Adavance ₹" class="text-right">1000</td>
-                            <td data-title="Paid ₹" class="text-right">500</td>
-                            <td data-title="O/S ₹" class="text-right">500</td>
-                        </tr>
-                        <tr>
-                            <td data-title="Bill Date">09-09-2020</td>
-                            <td data-title="Bill #">AG-00021</td>
-                            <td data-title="Job #">12345</td>
-                            <td data-title="Job ₹" class="text-right">2000</td>
-                            <td data-title="Adavance ₹" class="text-right">1000</td>
-                            <td data-title="Paid ₹" class="text-right">500</td>
-                            <td data-title="O/S ₹" class="text-right">500</td>
-                        </tr>
-                        <tr>
-                            <td data-title="Bill Date">09-09-2020</td>
-                            <td data-title="Bill #">AG-00021</td>
-                            <td data-title="Job #">12345</td>
-                            <td data-title="Job ₹" class="text-right">2000</td>
-                            <td data-title="Adavance ₹" class="text-right">1000</td>
-                            <td data-title="Paid ₹" class="text-right">500</td>
-                            <td data-title="O/S ₹" class="text-right">500</td>
-                        </tr>
-                        
+
+
                     </tbody>
                 </table>
-                <div class="d-flex justify-content-between align-items-center table-pagination">
-                    <div class="d-flex align-items-center">
-                        Show <span class="plain-select">
-                            <select class="form-control ml-2 mr-2" id="select3">
-                                <option>10</option>
-                                <option>20</option>
-                                <option>25</option>
-                            </select>
-                        </span>
-                        Entries
-                    </div>
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-end">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1"><i
-                                        class="icon-left"></i></a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                            <li class="page-item active"><a class="page-link" href="javascript:void(0)">2</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="javascript:void(0)"><i class="icon-right"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+
                 <!--table listing end-->
             </div>
         </div>
